tree-sitter-etch/grammar.js
const comma = rule => optional(seq(rule, repeat(seq(',', rule)), optional(',')));
const statements = rule => optional(seq(rule, repeat(seq(';', rule)), optional(';')));
module.exports = grammar({
  name: 'etch',
  extras: $ => [/\s/, $.comment],
  word: $ => $.identifier,
  conflicts: $ => [[$._expression, $.object_field], [$.object, $.block]],
  rules: {
    source_file: $ => statements($._program),
    comment: _ => token(seq('//', /[^\n]*/)),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    number: _ => /[0-9]+(\.[0-9]+)?[a-zA-ZµΩ_]*/,
    string: $ => seq('"', repeat(choice(token.immediate(/[^"\\]+/), $.escape_sequence)), '"'),
    escape_sequence: _ => token.immediate(/\\["\\nrt0]/),
    boolean: _ => choice('true', 'false'),
    _program: $ => choice($.import, $.export, $._statement),
    import: $ => seq('from', $.string, 'import', $._pattern),
    export: $ => seq('export', $.definition),
    _statement: $ => choice($.definition, $.type_definition, $.return_statement, $._expression),
    definition: $ => seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),
    type_definition: $ => seq('type', $.identifier, '=', $._type),
    return_statement: $ => seq('return', $._expression),
    _pattern: $ => choice($.identifier, $.number, $.string, $.boolean, $.object_pattern, $.array_pattern),
    object_pattern: $ => seq('{', comma($.pattern_field), '}'),
    pattern_field: $ => seq($.identifier, optional(seq(':', $._pattern))),
    array_pattern: $ => seq('[', comma($._pattern), ']'),
    _expression: $ => choice($.identifier, $.number, $.string, $.boolean, $.node, $.object, $.array, $.lambda, $.block, $.parenthesized_expression, $.call, $.field_access, $.unary_expression, $.binary_expression, $.match_expression),
    node: _ => '@',
    object: $ => seq('{', comma($.object_field), '}'),
    object_field: $ => seq(field('name', $.identifier), optional(seq(':', $._expression))),
    array: $ => seq('[', comma($._expression), ']'),
    block: $ => seq('{', statements($._statement), '}'),
    lambda: $ => seq('(', comma($.parameter), ')', '->', $._expression),
    parameter: $ => seq($.identifier, ':', $._type),
    parenthesized_expression: $ => seq('(', $._expression, ')'),
    call: $ => prec.left(9, seq(field('function', $._expression), '(', comma($.argument), ')')),
    argument: $ => seq($.identifier, ':', $._expression),
    field_access: $ => prec.left(9, seq($._expression, '.', field('field', $.identifier))),
    unary_expression: $ => prec(8, seq(choice('!', '-'), $._expression)),
    binary_expression: $ => choice(...[['*',7],['/',7],['+',6],['-',6],['<',5],['>',5],['<=',5],['>=',5],['==',4],['|',3],['<-',2]].map(([operator, precedence]) => prec.left(precedence, seq($._expression, operator, $._expression)))),
    match_expression: $ => seq('match', $._expression, '{', comma($.match_arm), '}'),
    match_arm: $ => seq(choice(seq(optional('let'), $._pattern, optional(seq('if', $._expression))), seq('if', $._expression)), '->', $._expression),
    _type: $ => choice($.named_type, $.numeric_type, $.object_type, $.array_type, $.optional_type, $.lambda_type, $.tuple_type, $.union_type),
    named_type: $ => $.identifier,
    numeric_type: $ => seq('Number', optional(seq('(', 'symbol', ':', $.string, ')'))),
    object_type: $ => seq('{', comma($.parameter), '}'),
    array_type: $ => seq('[', $._type, ']'),
    optional_type: $ => prec.left(3, seq($._type, '?')),
    lambda_type: $ => prec.right(1, seq('(', comma($.parameter), ')', '->', $._type)),
    tuple_type: $ => seq('(', comma($._type), ')'),
    union_type: $ => prec.left(2, seq($._type, '|', $._type)),
  }
});
